<?xml version="1.0"?>
<package format="3">
  <name>rosbag_record</name>
  <version>1.14.3</version>
  <maintainer email="nobuo.takamasa@tier4.jp">Nobuo Takamasa</maintainer>
  <description>the rosbag_record package</description>
  <license>Apache 2.0</license>
  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>rosbag_storage</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <depend>xmlrpcpp</depend>

  <exec_depend>roslib</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
  </export>
</package>
